# SalesForge

./: .env.dev.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/core/: config.py  constants.py  db.py
