[project]
name = "salesforge"
version = "0.1.0"
description = "AI Powered Sales Team"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
]
